2021-08-16  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r281077.
        https://bugs.webkit.org/show_bug.cgi?id=229137

        broke GTK/WPE builds

        Reverted changeset:

        "[WPE][GTK] Clean build broken with python3 after r280382"
        https://bugs.webkit.org/show_bug.cgi?id=228628
        https://commits.webkit.org/r281077

2021-08-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Test WebKitWebView/page-visibility is a flaky timeout
        https://bugs.webkit.org/show_bug.cgi?id=214804

        Reviewed by Adrian Perez de Castro.

        Do not wait for title change if the title already changed.

        * TestWebKitAPI/Tests/WebKitGLib/TestWebKitWebView.cpp:
        (testWebViewPageVisibility):
        * TestWebKitAPI/glib/TestExpectations.json:
        * TestWebKitAPI/glib/WebKitGLib/WebViewTest.cpp:
        (WebViewTest::waitUntilTitleChangedTo):
        (WebViewTest::waitUntilTitleChanged):

2021-08-16  Philippe Normand  <pnormand@igalia.com>

        [WPE][GTK] Clean build broken with python3 after r280382
        https://bugs.webkit.org/show_bug.cgi?id=228628

        Reviewed by Adrian Perez de Castro.

        The webkitpy autoinstall doesn't reliably work when it's triggered from concurrent
        processes. Replace webkitpy usage in apply-build-revision-to-files.py script with explicit
        calls to svnversion, git svn info or git log -1, depending on the kind of SCM checkout.

        * glib/apply-build-revision-to-files.py:
        (get_build_revision):
        (main):

2021-08-16  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix GTK distcheck build

        * gtk/manifest.txt.in: Add missingImage@3x.png to the tarball.

2021-08-15  Miguel Gomez  <magomez@igalia.com>

        [GTK][WPE] Add API to pass WebKitMemoryPressureHandler parameters to the network processes
        https://bugs.webkit.org/show_bug.cgi?id=228227

        Reviewed by Carlos Garcia Campos.
